--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>KINGS LEAGUE BRASIL - Simulador</title>
+  <title>Simulador da Tribo - KINGS LEAGUE BRASIL</title>
   <style>
     body {
       background-color: #121212;
@@ -11,18 +11,47 @@
       text-align: center;
       padding: 20px;
     }
+
     table {
       width: 90%;
       margin: 20px auto;
       border-collapse: collapse;
+      background-color: #1a1a1a;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
+
     th, td {
       border: 1px solid #444;
-      padding: 8px;
+      padding: 12px 10px;
+      text-align: center;
     }
+
     th {
       background-color: #222;
+      color: #ccc;
     }
+
+    tr {
+      transition: background-color 0.3s;
+    }
+
+    tr:hover {
+      background-color: #2a2a2a;
+    }
+
+    tr.primeiro {
+      border-left: 6px solid #00e3c1;
+    }
+
+    tr.playoff {
+      border-left: 6px solid #ffe500;
+    }
+
+    tr.fora {
+      border-left: 6px solid transparent;
+    }
+
     button {
       margin: 5px;
       padding: 8px 12px;
@@ -32,9 +61,11 @@
       cursor: pointer;
       border-radius: 5px;
     }
+
     button:hover {
       background-color: #555;
     }
+
     footer {
       margin-top: 30px;
       font-size: 14px;
@@ -44,11 +75,12 @@
 </head>
 <body>
 
-  <h1>KINGS LEAGUE BRASIL - Simulador</h1>
+  <h1>Simulador da Tribo - KINGS LEAGUE BRASIL</h1>
 
   <table id="standingsTable">
     <thead>
       <tr>
+        <th>#</th>
         <th>Time</th>
         <th>Jogos</th>
         <th>Vitórias</th>
@@ -64,7 +96,7 @@
   <h2>Próximos Jogos</h2>
   <div id="matches"></div>
 
-  <footer>by: Pedro Lins</footer>
+  <footer>@pedro.lins_</footer>
 
   <script>
     const teams = [
@@ -72,7 +104,6 @@
       "Capim FC", "Dendele FC", "FC Real Elite", "LOUD SC", "Funkbol Clube"
     ];
 
-    // Aqui você altera manualmente as vitórias, derrotas, etc
     const standings = {
       "Furia FC": {games: 7, wins: 6, losses: 0, shootoutWins: 0, shootoutLosses: 1, points: 19},
       "G3X FC": {games: 7, wins: 6, losses: 1, shootoutWins: 0, shootoutLosses: 0, points: 18},
@@ -87,26 +118,33 @@
     };
 
     const matches = [
-  // Rodada 8
-  { round: 8, teams: ["Capim FC", "Nyvelados FC"] },
-  { round: 8, teams: ["Desimpedidos Goti", "FC Real Elite"] },
-  { round: 8, teams: ["Funkbol Clube", "Furia FC"] },
-  { round: 8, teams: ["Dendele FC", "LOUD SC"] },
-  { round: 8, teams: ["G3X FC", "Fluxo FC"] },
-  // Rodada 9
-  { round: 9, teams: ["Fluxo FC", "Furia FC"] },
-  { round: 9, teams: ["Funkbol Clube", "LOUD SC"] },
-  { round: 9, teams: ["Capim FC", "Desimpedidos Goti"] },
-  { round: 9, teams: ["G3X FC", "Nyvelados FC"] },
-  { round: 9, teams: ["Dendele FC", "FC Real Elite"] }
-];
+      { round: 8, teams: ["Capim FC", "Nyvelados FC"] },
+      { round: 8, teams: ["Desimpedidos Goti", "FC Real Elite"] },
+      { round: 8, teams: ["Funkbol Clube", "Furia FC"] },
+      { round: 8, teams: ["Dendele FC", "LOUD SC"] },
+      { round: 8, teams: ["G3X FC", "Fluxo FC"] },
+      { round: 9, teams: ["Fluxo FC", "Furia FC"] },
+      { round: 9, teams: ["Funkbol Clube", "LOUD SC"] },
+      { round: 9, teams: ["Capim FC", "Desimpedidos Goti"] },
+      { round: 9, teams: ["G3X FC", "Nyvelados FC"] },
+      { round: 9, teams: ["Dendele FC", "FC Real Elite"] }
+    ];
 
     function updateStandings() {
       const tbody = document.querySelector("#standingsTable tbody");
       tbody.innerHTML = "";
-      teams.forEach(team => {
+
+      const sortedTeams = [...teams].sort((a, b) => standings[b].points - standings[a].points);
+
+      sortedTeams.forEach((team, index) => {
+        let className = "fora";
+        if (index === 0) className = "primeiro";
+        else if (index >= 1 && index <= 6) className = "playoff";
+
         const tr = document.createElement("tr");
+        tr.className = className;
         tr.innerHTML = `
+          <td>${index + 1}</td>
           <td>${team}</td>
           <td>${standings[team].games}</td>
           <td>${standings[team].wins}</td>
@@ -120,50 +158,31 @@
     }
 
     function createMatches() {
-  const div = document.getElementById("matches");
-  div.innerHTML = "";
+      const div = document.getElementById("matches");
+      div.innerHTML = "";
 
-  const rodada8 = matches.filter(match => match.round === 8);
-  const rodada9 = matches.filter(match => match.round === 9);
-
-  if (rodada8.length > 0) {
-    const rodada8Div = document.createElement("div");
-    rodada8Div.innerHTML = "<h3>Rodada 8</h3>";
-    rodada8.forEach((match, index) => {
-      const realIndex = matches.indexOf(match);
-      const matchDiv = document.createElement("div");
-      matchDiv.innerHTML = `
-        <strong>${match.teams[0]} vs ${match.teams[1]}</strong><br>
-        <button onclick="playMatch(${realIndex}, '${match.teams[0]}', '${match.teams[1]}', 'win')">${match.teams[0]} Vence</button>
-        <button onclick="playMatch(${realIndex}, '${match.teams[0]}', '${match.teams[1]}', 'shootoutWin')">${match.teams[0]} Vence Shootout</button>
-        <button onclick="playMatch(${realIndex}, '${match.teams[1]}', '${match.teams[0]}', 'shootoutWin')">${match.teams[1]} Vence Shootout</button>
-        <button onclick="playMatch(${realIndex}, '${match.teams[1]}', '${match.teams[0]}', 'win')">${match.teams[1]} Vence</button>
-        <hr>
-      `;
-      rodada8Div.appendChild(matchDiv);
-    });
-    div.appendChild(rodada8Div);
-  }
-
-  if (rodada9.length > 0) {
-    const rodada9Div = document.createElement("div");
-    rodada9Div.innerHTML = "<h3>Rodada 9</h3>";
-    rodada9.forEach((match, index) => {
-      const realIndex = matches.indexOf(match);
-      const matchDiv = document.createElement("div");
-      matchDiv.innerHTML = `
-        <strong>${match.teams[0]} vs ${match.teams[1]}</strong><br>
-        <button onclick="playMatch(${realIndex}, '${match.teams[0]}', '${match.teams[1]}', 'win')">${match.teams[0]} Vence</button>
-        <button onclick="playMatch(${realIndex}, '${match.teams[0]}', '${match.teams[1]}', 'shootoutWin')">${match.teams[0]} Vence Shootout</button>
-        <button onclick="playMatch(${realIndex}, '${match.teams[1]}', '${match.teams[0]}', 'shootoutWin')">${match.teams[1]} Vence Shootout</button>
-        <button onclick="playMatch(${realIndex}, '${match.teams[1]}', '${match.teams[0]}', 'win')">${match.teams[1]} Vence</button>
-        <hr>
-      `;
-      rodada9Div.appendChild(matchDiv);
-    });
-    div.appendChild(rodada9Div);
-  }
-}
+      [8, 9].forEach(round => {
+        const rodada = matches.filter(match => match.round === round);
+        if (rodada.length > 0) {
+          const rodadaDiv = document.createElement("div");
+          rodadaDiv.innerHTML = `<h3>Rodada ${round}</h3>`;
+          rodada.forEach(match => {
+            const realIndex = matches.indexOf(match);
+            const matchDiv = document.createElement("div");
+            matchDiv.innerHTML = `
+              <strong>${match.teams[0]} vs ${match.teams[1]}</strong><br>
+              <button onclick="playMatch(${realIndex}, '${match.teams[0]}', '${match.teams[1]}', 'win')">${match.teams[0]} Vence</button>
+              <button onclick="playMatch(${realIndex}, '${match.teams[0]}', '${match.teams[1]}', 'shootoutWin')">${match.teams[0]} Vence Shootout</button>
+              <button onclick="playMatch(${realIndex}, '${match.teams[1]}', '${match.teams[0]}', 'shootoutWin')">${match.teams[1]} Vence Shootout</button>
+              <button onclick="playMatch(${realIndex}, '${match.teams[1]}', '${match.teams[0]}', 'win')">${match.teams[1]} Vence</button>
+              <hr>
+            `;
+            rodadaDiv.appendChild(matchDiv);
+          });
+          div.appendChild(rodadaDiv);
+        }
+      });
+    }
 
     function playMatch(index, winner, loser, type) {
       standings[winner].games++;
